--- a/styles/global.css
+++ b/styles/global.css
@@ -1,31 +1,26 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'poppins', sans-serif;
 }
 
-html, body
-{
+html, body {
     overflow-x: hidden;
     scroll-snap-type: y proximity;
     scroll-behavior: smooth;
 }
 
-ul
-{
+ul {
     list-style: none;
 }
 
-a
-{
+a {
     color: inherit;
     text-decoration: none;
 }
 
-button
-{
+button {
     width: 150px;
     color: white;
     font-size: 12px;
@@ -39,40 +34,34 @@ button
     cursor: pointer;
 }
 
-button .fa-sharp
-{
+button .fa-sharp {
     color: inherit;
 }
 
-button:hover
-{
+button:hover {
     background-color: white;
     color: black !important;
     border-color: black;
 }
 
 .home button:active,
-.projects button:active
-{
+.projects button:active {
     padding: 2px 0;
 }
 
 .about button:active,
-.contact button:active
-{
+.contact button:active {
     margin-left: 40px;
 }
 
-.section-title
-{
+.section-title {
     font-size: 40px;
     color: black;
     font-weight: 700;
     margin-bottom: 14px;
 }
 
-hr
-{
+hr {
     height: 2px;
     width: 70px;
     background: #ea4020;
@@ -80,37 +69,33 @@ hr
     margin-bottom: 30px;
 }
 
-nav .fa-sharp
-{
+nav .fa-sharp {
     color: white;
     display: none;
 }
 
-.home br
-{
+.home br {
     display: none;
 }
 
 .home .section-container img,
-.about .section-container img
-{
+.about .section-container img {
     animation: move 2.5s linear infinite;
 }
 
-@keyframes move
-{
+@keyframes move {
     0%
-    {
+ {
         transform: translate(-15px, 0px);
     }
 
     50%
-    {
+ {
         transform: translate(0px, -15px);
     }  
     
     100%
-    {
+ {
         transform: translate(-15px, 0px);
     }  
 }
