--- a/styles/home.css
+++ b/styles/home.css
@@ -1,12 +1,10 @@
-.home
-{
+.home {
     width: 100%;
     background-color: black;
     position: relative;
 }
 
-.home .section-container
-{
+.home .section-container {
     height: 100vh;
     width: 80%;
     color: white;
@@ -17,55 +15,47 @@
 }
 
 .name-tag,
-.role-heading
-{
+.role-heading {
     font-weight: 400;
 }
 
-.name-tag
-{
+.name-tag {
     font-size: 14px;
     letter-spacing: 2px;
     margin-bottom: 12px;
 }
 
-.name-heading
-{
+.name-heading {
     font-size: 38px;
     font-weight: 700;
     letter-spacing: 1px;
     margin-bottom: -10px;
 }
 
-.name-heading span
-{
+.name-heading span {
     color: rgb(30, 215, 96);
 }
 
-.role-heading
-{
+.role-heading {
     font-size: 38px;
     letter-spacing: 1px;
     margin-bottom: 20px;
 }
 
-.home .section-container p
-{
+.home .section-container p {
     max-width: 600px;
     font-size: 15.5px;
     word-spacing: 2px;
     margin-bottom: 50px;
 }
 
-.contact-me-btn
-{
+.contact-me-btn {
     background-color: rgb(22, 164, 72);
     border: 1px solid rgb(22, 164, 72);
     margin-right: 20px;
 }
 
-.resume-btn
-{
+.resume-btn {
     background-color: black;
     border: 1px solid white;
 }
