--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,11 +1,9 @@
-.projects
-{
+.projects {
     width: 100%;
     position: relative;
 }
 
-.projects .section-container
-{
+.projects .section-container {
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -14,28 +12,24 @@
     margin: auto;
 }
 
-.project-container
-{
+.project-container {
     display: flex;
     align-items: center;
     margin-bottom: 50px;
 }
 
-.project-title
-{
+.project-title {
     font-size: 22px;
     font-weight: 600;
     margin-bottom: 14px;
 }
 
 .project-container img,
-.project-descr-container
-{
+.project-descr-container {
     width: 484px;
 }
 
-.project-container img
-{
+.project-container img {
     height: 270px;
     object-fit: cover;
     border-radius: 10px;
@@ -44,54 +38,46 @@
     transition: 0.3s;
 }
 
-.project-container img:hover
-{
+.project-container img:hover {
     opacity: 0.7;
     margin: 0 10px 0 -10px;
 }
 
-.project-descr-container
-{
+.project-descr-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 0 40px;
 }
 
-.project-descr-container p
-{
+.project-descr-container p {
     font-size: 15px;
     color: rgb(82, 82, 82);
     margin-bottom: 14px;
 }
 
-.project-tech-container
-{
+.project-tech-container {
     font-size: 34px;
     margin-bottom: 14px;
 }
 
-.projects button
-{
+.projects button {
     width: 135px;
 }
 
 .live-demo-btn,
-.home-btn
-{
+.home-btn {
     background-color: rgb(22, 164, 72);
     border: 1px solid rgb(22, 164, 72);
     margin-right: 20px;
 }
 
-.code-btn
-{
+.code-btn {
     background-color: black;
     border: 1px solid black;
 }
 
-.project-descr-container hr
-{
+.project-descr-container hr {
     width: 50px;
     margin-bottom: 14px;
 }
