style(website): enhance about me, update project
- Enhance the about me section with more details.
- Update a project showcased in the projects section.
- Improve class names in HTML for better readability.

--- a/styles/query.css
+++ b/styles/query.css
@@ -78,11 +78,11 @@
         font-size: 24px;
     }
 
-    .project-descr-container {
+    .project-info-container {
         margin: 46px 0 20px 0;
     }
 
-    .project-descr-container p {
+    .project-info-container p {
         font-size: 16px;
     }
 
@@ -248,7 +248,7 @@
         border-radius: 10px;
     }
 
-    .project-descr-container p {
+    .project-info-container p {
         width: 80%;
     }
 
@@ -330,7 +330,7 @@
         border-radius: 10px;
     }
 
-    .project-descr-container p {
+    .project-info-container p {
         font-size: 15px;
         width: 70%;
     }
