--- a/styles/projects.css
+++ b/styles/projects.css
@@ -25,8 +25,8 @@
 }
 
 .project-container img,
-.project-descr-container {
-    width: 484px;
+.project-info-container {
+    width: 500px;
 }
 
 .project-container img {
@@ -43,20 +43,21 @@
     margin: 0 10px 0 -10px;
 }
 
-.project-descr-container {
+.project-info-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 40px;
+    padding: 0 50px;
 }
 
-.project-descr-container p {
+.project-info-container p {
     font-size: 15px;
     color: rgb(82, 82, 82);
     margin-bottom: 14px;
+    margin-left: 30px;
 }
 
-.project-tech-container {
+.project-tools-container {
     font-size: 34px;
     margin-bottom: 14px;
 }
@@ -77,7 +78,7 @@
     border: 1px solid black;
 }
 
-.project-descr-container hr {
+.project-info-container hr {
     width: 50px;
     margin-bottom: 14px;
 }
