style: update website spacing and code readability
- Refined spacing within sections for improved interaction.
- Corrected icon color inconsistency for specific screen widths.
- Enhanced code readability by aligning class and id names.
- Replaced onclick attributes with event listeners for modernization.
- Removed redundant code segments.
- Enhanced project documentation in the README.

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -85,7 +85,7 @@ input, textarea {
 }
 
 .message-field-error-message {
-    top: 216px;
+    top: 216px !important;
 }
 
 .message-field-char-counter {
