--- a/styles/projects.css
+++ b/styles/projects.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 120px 0;
+    padding: 105px 0 !important;
     margin: auto;
 }
 
