--- a/styles/about.css
+++ b/styles/about.css
@@ -1,6 +1,7 @@
 .about {
-    width: 100%;
     position: relative;
+    background-color: #f9f8f7;
+    width: 100%;
 }
 
 .about .section-container {
@@ -22,9 +23,4 @@
     max-width: 600px;
     color: rgb(82, 82, 82);
     margin-bottom: 50px;
-}
-
-.linkedin-btn {
-    background-color: rgb(22, 164, 72);
-    border: 1px solid rgb(22, 164, 72);
 }
