--- a/styles/header.css
+++ b/styles/header.css
@@ -1,22 +1,23 @@
 .header {
-    width: 100%;
     position: fixed;
+    width: 100%;
     top: 0;
     z-index: 100;
+    border-bottom: 1px solid rgba(25, 25, 25, 0.1);
     transition: 0.3s ease-in-out;
 }
 
 nav {
-    height: 90px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 90px;
     padding: 0 6%;
 }
 
 .nav-logo {
-    font-size: 30px;
     color: white;
+    font-size: 30px;
     font-weight: 700;
 }
 
@@ -25,20 +26,20 @@ nav {
 }
 
 .nav-menu ul li {
+    display: inline-block;
+    position: relative;
     color: white;
     font-size: 16px;
     letter-spacing: 1.5px;
-    display: inline-block;
-    position: relative;
     padding: 8px 12px;
 }
 
 .nav-menu ul li::after {
+    display: block;
+    background: rgb(22, 164, 72);
     height: 2px;
     width: 0;
-    background: rgb(22, 164, 72);
-    display: block;
-    content: "";
+    content: '';
     margin: auto;
     transition: 0.5s;
 }
