--- a/styles/shared/general.css
+++ b/styles/shared/general.css
@@ -5,7 +5,8 @@
     font-family: 'poppins', sans-serif;
 }
 
-html, body {
+html,
+body {
     overflow-x: hidden;
     scroll-snap-type: y proximity;
     scroll-behavior: smooth;
@@ -18,20 +19,25 @@ ul {
 a {
     color: inherit;
     text-decoration: none;
+    text-align: center;
 }
 
 button {
     width: 150px;
     color: white;
-    font-size: 12px;
+    font-size: 13px;
     font-weight: 500;
     letter-spacing: 2px;
     border-radius: 30px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 6px -1px,
-    rgba(0, 0, 0, 0.06) 0 2px 4px -1px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 6px -1px, rgba(0, 0, 0, 0.06) 0 2px 4px -1px;
     transition: 0.3s;
     padding: 14px 0;
     cursor: pointer;
+}
+
+.button-primary {
+    background-color: rgb(22, 164, 72);
+    border: 1px solid rgb(22, 164, 72);
 }
 
 button .fa-sharp {
@@ -55,16 +61,16 @@ button:hover {
 }
 
 .section-title {
-    font-size: 40px;
     color: black;
+    font-size: 40px;
     font-weight: 700;
     margin-bottom: 14px;
 }
 
 hr {
+    background: #ea4020;
     height: 2px;
     width: 70px;
-    background: #ea4020;
     border: none;
     margin-bottom: 30px;
 }
@@ -84,18 +90,15 @@ nav .fa-sharp {
 }
 
 @keyframes move {
-    0%
- {
+    0% {
         transform: translate(-15px, 0px);
     }
 
-    50%
- {
+    50% {
         transform: translate(0px, -15px);
-    }  
-    
-    100%
- {
+    }
+
+    100% {
         transform: translate(-15px, 0px);
-    }  
+    }
 }
