style(projects): update button styling

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -70,7 +70,7 @@
     width: 135px;
 }
 
-.code-button {
+.github-button {
     background-color: black;
     border: 1px solid black;
     margin-left: 20px;
