refractor(home): remove resume button

--- a/styles/home.css
+++ b/styles/home.css
@@ -49,9 +49,9 @@
     margin-bottom: 50px;
 }
 
-.contact-me-button {
+/* .contact-me-button {
     margin-right: 20px;
-}
+} */
 
 .resume-button {
     background-color: black;
