--- a/styles/header.css
+++ b/styles/header.css
@@ -15,13 +15,13 @@ nav {
     padding: 0 6%;
 }
 
-.nav-logo {
+.nav-menu-logo {
     color: white;
     font-size: 30px;
     font-weight: 700;
 }
 
-.nav-logo span {
+.nav-menu-logo span {
     color: rgb(30, 215, 96);
 }
 
@@ -53,7 +53,7 @@ header.scrolled {
     opacity: 0.98;
 }
 
-header.scrolled .nav-logo,
+header.scrolled .nav-menu-logo,
 header.scrolled .nav-menu ul li {
     color: black;
 }
