--- a/styles/shared/query.css
+++ b/styles/shared/query.css
@@ -56,7 +56,7 @@
     }
 
     /* Skills */
-    .skill-icon-container div {
+    .skills-icons-container div {
         width: 255px !important;
     }
 
@@ -105,7 +105,7 @@
 
 @media (max-width: 930px) {
     /* Skills */
-    .skill-icon-container {
+    .skills-icons-container {
         grid-template-columns: 250px 250px !important;
     }
 
@@ -155,12 +155,12 @@
 
 @media (max-width: 675px) {
     /* Skills */
-    .skill-icon-container {
+    .skills-icons-container {
         display: flex !important;
         flex-direction: column;
     }
 
-    .skill-icon-container div {
+    .skills-icons-container div {
         width: 255px !important;
     }
 
@@ -254,7 +254,7 @@
     }
 
     /* Header */
-    .nav-logo {
+    .nav-menu-logo {
         font-size: 26px !important;
     }
 
