--- a/styles/skills.css
+++ b/styles/skills.css
@@ -13,13 +13,13 @@
     margin: auto;
 }
 
-.skill-icon-container {
+.skills-icons-container {
     display: grid;
     grid-template-columns: 250px 250px 250px;
     gap: 30px;
 }
 
-.skill-icon-container div {
+.skills-icons-container div {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,16 +31,16 @@
     transition: 0.3s;
 }
 
-.skill-icon-container div:hover {
+.skills-icons-container div:hover {
     opacity: 0.7;
     margin: -10px 0 10px 0;
 }
 
-.skill-icon-container label {
+.skills-icons-container label {
     font-size: 18px;
 }
 
-.skill-icon-container div hr {
+.skills-icons-container div hr {
     width: 34px;
     margin: 18px 0 12px 0;
 }
