feat: update header and footer sections
- Make header background colour solid on page scroll for better clarity.
- Align footer copyright notice to flex-end for consistency.
- Increase font size of website buttons for better readability.

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,25 +1,29 @@
-.footer {
+footer {
     width: 100%;
     color: white;
     position: relative;
 }
 
-.footer .section-container {
+footer .section-container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     background-color: black;
     padding: 26px 6%;
 }
 
-.footer .name-heading {
+footer .name-heading {
     font-size: 23px;
     padding-bottom: 6px;
 }
 
-.footer .role-heading {
+footer .role-heading {
     font-size: 14px;
     margin: 0;
+}
+
+.copyright-notice-container {
+    display: flex;
+    align-items: flex-end;
 }
 
 .copyright-notice {
