--- a/styles/home.css
+++ b/styles/home.css
@@ -1,13 +1,13 @@
 .home {
     width: 100%;
-    background-color: black;
+    background-color: var(--black);
     position: relative;
 }
 
 .home .section-container {
     height: 100vh;
     width: 80%;
-    color: white;
+    color: var(--white);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,7 +33,7 @@
 }
 
 .name-heading span {
-    color: rgb(30, 215, 96);
+    color: var(--custom-light-green-colour);
 }
 
 .role-heading {
@@ -54,6 +54,6 @@
 } */
 
 .resume-button {
-    background-color: black;
+    background-color: var(--black);
     border: 1px solid white;
 }
