--- a/styles/skills.css
+++ b/styles/skills.css
@@ -1,6 +1,6 @@
 .skills {
     width: 100%;
-    background-color: rgb(234, 237, 242);
+    background-color: var(--custom-light-gray-colour);
     position: relative;
 }
 
@@ -23,11 +23,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: white;
+    background-color: var(--white);
     border-radius: 10px;
-    color: rgb(82, 82, 82);
+    color: var(--custom-dark-gray-colour);
     padding: 40px 60px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 6px -1px, rgba(0, 0, 0, 0.06) 0 2px 4px -1px;
+    box-shadow: var(--box-shadow-1);
     transition: 0.3s;
 }
 
