--- a/styles/shared/query.css
+++ b/styles/shared/query.css
@@ -74,11 +74,11 @@
         font-size: 24px;
     }
 
-    .project-info-container {
+    .project-details-container {
         margin: 46px 0 20px 0;
     }
 
-    .project-info-container p {
+    .project-details-container p {
         font-size: 16px;
     }
 
@@ -122,11 +122,11 @@
 @media (max-width: 750px) {
     /* Header */
     .nav-menu {
+        position: absolute;
         height: 100vh;
         width: 200px;
-        font-size: 40px;
         background-color: var(--nav-sidebar-background-colour);
-        position: absolute;
+        font-size: 40px;
         top: 0;
         right: -200px;
         transition: 0.6s;
@@ -137,9 +137,9 @@
     }
 
     nav .fa-sharp {
-        font-size: 24px;
         display: block;
         text-align: right;
+        font-size: 24px;
         margin: 18px 20px;
         cursor: pointer;
     }
@@ -215,7 +215,7 @@
         margin-right: 12px !important;
     } */
 
-    .project-info-container p {
+    .project-details-container p {
         width: 80%;
     }
 
@@ -286,7 +286,7 @@
         padding-top: 70px;
     }
 
-    .project-info-container p {
+    .project-details-container p {
         font-size: 15px;
         width: 70%;
     }
